# JobSummarizer

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  requirements.txt
app/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
app/baml_src/: clients.baml  cvadjuster.baml  jobposting.baml
app/models/: __init__.py  job.py  resume.py
baml_client/: sync_client.py  type_map.py  types.py
baml_src/: jobposting.baml
