[project]
name = "jobsummariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baml-py==0.206.1",
    "crawl4ai>=0.7.4",
    "docling>=2.52.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
